<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ubicacion"
            android:icon="@drawable/ic_maps"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_inmueble"
            android:icon="@drawable/ic_inmuebles"
            android:title="@string/menu_inmuebles" />

        <!--
        <item
            android:id="@+id/nav_inquilino"
            android:icon="@drawable/ic_inquilinos"
            android:title="@string/menu_inquilinos" />
        -->

        <item
            android:id="@+id/nav_contrato"
            android:icon="@drawable/ic_contrato"
            android:title="@string/menu_contratos" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout2"
            android:title="@string/menu_salir" />
    </group>
</menu>