<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_ubicacion">

    <fragment
        android:id="@+id/nav_ubicacion"
        android:name="com.ulp.appinmobiliaria.ui.ubicacion.UbicacionFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_ubicacion" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.ulp.appinmobiliaria.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" >

        <action
            android:id="@+id/action_perfilFragment_to_cambiarContrasenaFragment"
            app:destination="@+id/cambiarContrasenaFragment" />
    </fragment>

    <fragment
        android:id="@+id/cambiarContrasenaFragment"
        android:name="com.ulp.appinmobiliaria.ui.perfil.CambiarContrasenaFragment"
        android:label="Cambiar Contraseña"
        tools:layout="@layout/fragment_cambiar_contrasena" />

    <fragment
        android:id="@+id/nav_inmueble"
        android:name="com.ulp.appinmobiliaria.ui.inmueble.InmuebleFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmueble" />

    <fragment
        android:id="@+id/nav_inquilino"
        android:name="com.ulp.appinmobiliaria.ui.inquilino.InquilinoFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilino" />

    <fragment
        android:id="@+id/nav_contrato"
        android:name="com.ulp.appinmobiliaria.ui.contrato.ContratoFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_contrato" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.ulp.appinmobiliaria.ui.logout.LogoutFragment"
        android:label="Cerrar Sesión" />

    <activity
        android:id="@+id/loginActivity"
        android:name="com.ulp.appinmobiliaria.ui.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />

</navigation>